--- a/about.html
+++ b/about.html
@@ -1,6 +1,56 @@
-
-
 <!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>About Us | DevOpsPro</title>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" />
+</head>
+<body>
+  <!-- Navbar -->
+  <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+    <div class="container">
+      <a class="navbar-brand" href="index.html">DevOpsPro</a>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarNav">
+        <ul class="navbar-nav ms-auto">
+          <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
+          <li class="nav-item"><a class="nav-link active" href="about.html">About</a></li>
+          <li class="nav-item"><a class="nav-link" href="index.html#services">Services</a></li>
+          <li class="nav-item"><a class="nav-link" href="index.html#contact">Contact</a></li>
+        </ul>
+      </div>
+    </div>
+  </nav>
+
+  <!-- About Section -->
+  <section class="py-5">
+    <div class="container">
+      <h2 class="mb-4 text-center">About DevOpsPro</h2>
+      <p>DevOpsPro is a forward-thinking tech company focused on transforming the way organizations build, deliver, and operate software. With a passionate team of DevOps engineers, cloud architects, and automation specialists, we partner with startups and enterprises to adopt scalable and secure DevOps practices.</p>
+      <p>We believe in automation, collaboration, and transparency. Our mission is to eliminate silos, accelerate software delivery, and empower teams with modern DevOps tools and practices.</p>
+      <p>Whether you're just starting your cloud journey or looking to optimize your CI/CD pipelines, DevOpsPro is here to help you every step of the way.</p>
+    </div>
+  </section>
+
+  <!-- Footer -->
+  <footer class="bg-dark text-white text-center py-3">
+    <p class="mb-0">&copy; 2025 DevOpsPro. All rights reserved.</p>
+  </footer>
+
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
+</body>
+</html>
+
+
+
+
+
+
+
+<!-- <!DOCTYPE html>
 <head>
     <title> About Us Page </title>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
@@ -33,3 +83,4 @@
     </div>
   </body>
 </html>
+ -->
